Data Analysis of the roadways, which street/highway had the most number of reports.

--- a/WorcesterCrashReports.ipynb
+++ b/WorcesterCrashReports.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4                       NaN      NaN  Local police         NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +420,7 @@
        "8      NaN  Local police         NaN  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "       'LEOMINSTER'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "4                       NaN      NaN  Local police         NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -769,7 +769,7 @@
        "9                        WEST BOYLSTON STREET  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "4  MOUNTAIN STREET WEST / BROOKS STREET   2/26/2015 8:29 PM  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        "Text(0.5,1,'Number of Reports in Months')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
        " <a list of 24 Patch objects>)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,25 +1214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_worcrash.PoliceAgency.dropna(axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22448da3400>"
+       "<matplotlib.legend.Legend at 0x2366171b978>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1276,6 +1267,73 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking which roadway have the highest reported crashes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9584"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_worcrash.Roadway.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAIN STREET             3976\n",
+      "PARK AVENUE             3652\n",
+      "Rte 290 W               3356\n",
+      "Rte 290 E               3188\n",
+      "LINCOLN STREET          2766\n",
+      "GRAFTON STREET          2180\n",
+      "CHANDLER STREET         2110\n",
+      "BELMONT STREET          1940\n",
+      "PLEASANT STREET         1832\n",
+      "WEST BOYLSTON STREET    1736\n",
+      "PLANTATION STREET       1458\n",
+      "SOUTHBRIDGE STREET      1196\n",
+      "HIGHLAND STREET         1190\n",
+      "CAMBRIDGE STREET        1126\n",
+      "SHREWSBURY STREET       1084\n",
+      "Name: Roadway, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "roadway_counts = df_worcrash.Roadway.value_counts()[:15]\n",
+    "print(roadway_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a bit surprising for me. Although I expected Main Street to have the a lot of report. I never would have thought that it would be more than the highways. Commulatively there seems to be more reports on the Strrets than the highways as well."
+   ]
   }
  ],
  "metadata": {
